bdr.BDR.scala.error
Compilation error:
BDR:4: error: type mismatch;
 found   : String
 required: Boolean
    var message : Boolean = litMessage()
                                      ^